XXX, 2008 - pyclewn 0.5
    New features:
        New --window option for the console window location.

    Changes:
        The vim implementation of the netbeans "remove" function is buggy, and
        has been fixed by patch 207 in vim 7.1. The workaround in pyclewn is to
        insert a '\n' before the line to delete, and to delete both lines in one
        shot. This workaround is not used when vim implements patch 207.

    Bug fixes:
        Avoid having Vim segfaults when stepping very fast with gdb, by the
        correct handling of the cursor position when restoring the cursor after
        an update of the gdb console.

        Enable a gdb command on the initial [No name] vim window.


April  9, 2008 - pyclewn 0.4

    Bug fix:
        Pyclewn exits with "gdb  CRITICAL this is not a gdb program" when gdb
        writes an unexpected terminfo sequence on a subprocess pipe.


March 22, 2008 - pyclewn 0.3

    Initial release.